[package]
name = "uribo"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A command-line tool for executing predefined commands"
homepage = "https://github.com/sile/uribo"
repository = "https://github.com/sile/uribo"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
orfail = "1.1.0"
serde_json = "1.0.108"
